fix: aligned h5 of input box to the center

--- a/css/input-box.module.scss
+++ b/css/input-box.module.scss
@@ -21,6 +21,9 @@
         flex-direction: column;
         gap: var(--default-spacing);
     }
+    h5 {
+        text-align: center;
+    }
 }
 
 .inputBox {
